[HOPSWORKS-1109] Append remove unicode character breaking nbconvert to html

--- a/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
+++ b/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
@@ -85,37 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>0</td><td>application_1573301781748_0001</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1573301781748_0001/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1573301781748_0001_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def minimal_mnist():\n",
     "    import tensorflow as tf\n",
@@ -170,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +151,7 @@
      "text": [
       "Finished Experiment \n",
       "\n",
-      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1573301781748_0001_1', {'accuracy': '0.8952', 'loss': '52.506138'})"
+      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1578481361664_0001_2', {'accuracy': 0.8934000134468079, 'loss': 53.07727813720703, 'log': 'Experiments/application_1578481361664_0001_2/output.log'})"
      ]
     }
    ],
