--- a/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
+++ b/notebooks/ml/Parallel_Experiments/Maggy/maggy-ablation-titanic-example.ipynb
@@ -69,37 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>8</td><td>application_1568986312014_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1568986312014_0009/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1568986312014_0009_01_000001/maggy_ablation__meb10000\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from hops import hdfs\n",
@@ -118,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,19 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pclass\n",
-      "sibsp\n",
-      "fare"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ablation_study.features.list_all()"
    ]
@@ -218,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,22 +237,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Included single layers are: \n",
-      "\n",
-      "my_dense_three\n",
-      "my_dense_sigmoid\n",
-      "my_dense_four\n",
-      "my_dense_two"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# see the included single layers\n",
     "\n",
@@ -310,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,20 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Included layer groups are: \n",
-      "\n",
-      "---- All layers prefixed \"my_dense\"\n",
-      "--- Layer group ['my_dense_four', 'my_dense_two']"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ablation_study.model.layers.print_all_groups()"
    ]
@@ -361,17 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are running maggy on Hopsworks."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# wrap your code in a Python function\n",
     "\n",
@@ -405,38 +335,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c3727450ead4f45834cafaf55b7899a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, description='Maggy experiment', max=10, style=ProgressStyle(description_wi…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "------ LOCO Results ------ \n",
-      "BEST Config Excludes {\"ablated_feature\": \"pclass\", \"ablated_layer\": \"None\"} -- metric 0.699999988079071\n",
-      "WORST Config Excludes {\"ablated_feature\": \"None\", \"ablated_layer\": \"my_dense_two\"} -- metric 0.5699999928474426\n",
-      "AVERAGE metric -- 0.6446666657924652\n",
-      "Total Job Time 3 minutes, 5 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# launch the experiment\n",
     "\n",
@@ -461,9 +364,9 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
