Update beam wordcount

--- a/notebooks/beam/portability_wordcount_python.ipynb
+++ b/notebooks/beam/portability_wordcount_python.ipynb
@@ -22,12 +22,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
+    "from __future__ import absolute_import\n",
+    "\n",
+    "import argparse\n",
+    "import logging\n",
+    "import re\n",
+    "\n",
+    "from past.builtins import unicode\n",
+    "\n",
     "import apache_beam as beam\n",
     "from apache_beam.io import ReadFromText\n",
     "from apache_beam.io import WriteToText\n",
     "from apache_beam.metrics import Metrics\n",
     "from apache_beam.metrics.metric import MetricsFilter\n",
+    "from apache_beam.options.pipeline_options import PipelineOptions\n",
+    "from apache_beam.options.pipeline_options import SetupOptions\n",
+    "\n",
+    "import os\n",
     "from hops import beam as hops_beam\n",
     "from apache_beam.options.pipeline_options import PipelineOptions, StandardOptions, SetupOptions, HadoopFileSystemOptions, PortableOptions, WorkerOptions, DebugOptions\n",
     "\n",
@@ -59,9 +70,7 @@
    "metadata": {},
    "source": [
     "## Run the WordCount example. \n",
-    "Default **input** is downloaded from `gs://dataflow-samples/shakespeare/kinglear.txt`. Alternatively, you can save the input file in a dataset, for example `Resources` and set the input to `os.path.join(hopsfs.project_path(exclude_nn_addr=True), 'Resources')`\n",
-    "\n",
-    "By default, **output** is written in the ``Resources`` dataset."
+    "Default **input** is the `README.md` file from the `Resources` dataset of this project and **output** is saved as `wordcount.out` in the same dataset."
    ]
   },
   {
@@ -91,6 +100,9 @@
     "  \"\"\"Parse each line of input text into words.\"\"\"\n",
     "\n",
     "  def __init__(self):\n",
+    "    # TODO(BEAM-6158): Revert the workaround once we can pickle super() on py3.\n",
+    "    # super(WordExtractingDoFn, self).__init__()\n",
+    "    beam.DoFn.__init__(self)\n",
     "    self.words_counter = Metrics.counter(self.__class__, 'words')\n",
     "    self.word_lengths_counter = Metrics.counter(self.__class__, 'word_lengths')\n",
     "    self.word_lengths_dist = Metrics.distribution(\n",
@@ -116,11 +128,11 @@
     "    return words\n",
     "\n",
     "p = beam.Pipeline(options=pipeline_options)\n",
+    " \n",
+    "  # Read the text file[pattern] into a PCollection.\n",
+    "lines = p | 'read' >> ReadFromText(os.path.join(hopsfs.project_path(exclude_nn_addr=True), 'Resources', 'README.md'))\n",
     "\n",
-    "# Read the text file[pattern] into a PCollection.\n",
-    "lines = p | 'read' >> ReadFromText(\"gs://dataflow-samples/shakespeare/kinglear.txt\")\n",
-    "\n",
-    "# Count the occurrences of each word.\n",
+    "  # Count the occurrences of each word.\n",
     "def count_ones(word_ones):\n",
     "    (word, ones) = word_ones\n",
     "    return (word, sum(ones))\n",
@@ -139,57 +151,51 @@
     "\n",
     "output = counts | 'format' >> beam.Map(format_result)\n",
     "\n",
-    "# Write the output using a \"Write\" transform that has side effects.\n",
-    "# pylint: disable=expression-not-assigned\n",
-    "output | 'write' >> WriteToText(os.path.join(hopsfs.project_path(exclude_nn_addr=True), 'Resources','wordcount.out'))\n",
+    "  # Write the output using a \"Write\" transform that has side effects.\n",
+    "  # pylint: disable=expression-not-assigned\n",
+    "output | 'write' >> WriteToText(os.path.join(hopsfs.project_path(exclude_nn_addr=True), 'Resources', 'wordcount.out'))\n",
     "\n",
     "result = p.run()\n",
     "result.wait_until_finish()\n",
     "\n",
-    "# Do not query metrics when creating a template which doesn't run\n",
+    "  # Do not query metrics when creating a template which doesn't run\n",
     "if (not hasattr(result, 'has_job')    # direct runner\n",
-    "  or result.has_job):               # not just a template creation\n",
+    "      or result.has_job):               # not just a template creation\n",
     "    empty_lines_filter = MetricsFilter().with_name('empty_lines')\n",
     "    query_result = result.metrics().query(empty_lines_filter)\n",
-    "if query_result['counters']:\n",
-    "    empty_lines_counter = query_result['counters'][0]\n",
-    "    logging.info('number of empty lines: %d', empty_lines_counter.result)\n",
+    "    if query_result['counters']:\n",
+    "      empty_lines_counter = query_result['counters'][0]\n",
+    "      logging.info('number of empty lines: %d', empty_lines_counter.result)\n",
     "\n",
-    "word_lengths_filter = MetricsFilter().with_name('word_len_dist')\n",
-    "query_result = result.metrics().query(word_lengths_filter)\n",
-    "if query_result['distributions']:\n",
-    "    word_lengths_dist = query_result['distributions'][0]\n",
-    "    logging.info('average word length: %d', word_lengths_dist.result.mean)\n",
+    "    word_lengths_filter = MetricsFilter().with_name('word_len_dist')\n",
+    "    query_result = result.metrics().query(word_lengths_filter)\n",
+    "    if query_result['distributions']:\n",
+    "      word_lengths_dist = query_result['distributions'][0]\n",
+    "      logging.info('average word length: %d', word_lengths_dist.result.mean)\n",
+    "    \n",
     "print('Done')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-flink_tutorial__meb10000",
+   "display_name": "python-p2__meb10000",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.16"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
