[HOPSWORKS-1109][Append] Set correct train file paths

--- a/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/automl_fashion_mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/TensorFlow/evolutionary_search/automl_fashion_mnist.ipynb
@@ -111,8 +111,8 @@
     "    num_input = 784 # MNIST data input (img shape: 28*28)\n",
     "    num_classes = 10 # MNIST total classes (0-9 digits)\n",
     "\n",
-    "    train_filenames = [hdfs.project_path() + \"Resources/train.tfrecords\"]\n",
-    "    validation_filenames = [hdfs.project_path() + \"Resources/validation.tfrecords\"]\n",
+    "    train_filenames = [hdfs.project_path() + \"TourData/mnist/train/train.tfrecords\"]\n",
+    "    validation_filenames = [hdfs.project_path() + \"TourData/mnist/validation/validation.tfrecords\"]\n",
     "\n",
     "    # Create the neural network\n",
     "    # TF Estimator input is a dict, in case of multiple inputs\n",
