[HOPSWORKS-1552] Typo fixes for S3-FeatureStore notebook (#120)

--- a/notebooks/featurestore/aws/S3-FeatureStore.ipynb
+++ b/notebooks/featurestore/aws/S3-FeatureStore.ipynb
@@ -31,37 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>1</td><td>application_1579736663902_0003</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://ip-10-0-1-87.eu-west-2.compute.internal:8088/proxy/application_1579736663902_0003/\">Link</a></td><td><a target=\"_blank\" href=\"http://ip-10-0-1-87.eu-west-2.compute.internal:8042/node/containerlogs/container_e02_1579736663902_0003_01_000001/demo_featurestore_fabio000__meb10179\">Link</a></td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from hops import featurestore"
    ]
@@ -88,18 +60,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "computing descriptive statistics for : sacramento_houses, version: 1\n",
-      "computing feature correlation for: sacramento_houses, version: 1\n",
-      "Could not compute feature correlation for: sacramento_houses, version: 1, set the optional argument feature_correlation=False to skip this step,\n",
-      " error: The provided spark dataframe does not contain any numeric columns. Cannot compute feature correlation on categorical columns. The numeric datatypes are: ['bigint', 'decimal', 'integer', 'int', 'double', 'long', 'float', 'short'] and the number of numeric datatypes in the dataframe is: 0 ([])\n",
-      "computing feature histograms for: sacramento_houses, version: 1\n",
-      "computing cluster analysis for: sacramento_houses, version: 1\n",
-      "Could not compute cluster analysis for: sacramento_houses, version: 1, set the optional argument cluster_analysis=False to skip this step,\n",
-      " error: The provided spark dataframe does not contain any numeric columns. Cannot compute cluster analysis with k-means on categorical columns. The numeric datatypes are: ['bigint', 'decimal', 'integer', 'int', 'double', 'long', 'float', 'short'] and the number of numeric datatypes in the dataframe is: 0 ([])\n",
+      "computing descriptive statistics for : sacramento_houses_raw, version: 1\n",
+      "computing feature correlation for: sacramento_houses_raw, version: 1\n",
+      "computing feature histograms for: sacramento_houses_raw, version: 1\n",
+      "computing cluster analysis for: sacramento_houses_raw, version: 1\n",
       "Registering feature metadata...\n",
       "Registering feature metadata... [COMPLETE]\n",
       "Writing feature data to offline feature group (Hive)...\n",
-      "Running sql: use demo_featurestore_fabio000_featurestore against offline feature store\n",
+      "Running sql: use demo_featurestore_admin000_featurestore against offline feature store\n",
       "Writing feature data to offline feature group (Hive)... [COMPLETE]\n",
       "Feature group created successfully\n",
       "Feature group imported successfully"
@@ -120,7 +88,7 @@
    "source": [
     "In the feature store UI you should now be able to see that the feature group has been created, browse its schema and statistics. You can now use it to [build training datasets](#training).\n",
     "\n",
-    "## Import raw data, do feature egineering and create a feature group<a name=\"raw\"></a>\n",
+    "## Import raw data, do feature engineering and create a feature group<a name=\"raw\"></a>\n",
     "\n",
     "In the next session we are going to assume that the data in the S3 bucket is raw data that needs to be feature engineered before it can be used by data scientists to build models.\n",
     "\n",
@@ -133,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +205,7 @@
       "Registering feature metadata...\n",
       "Registering feature metadata... [COMPLETE]\n",
       "Writing feature data to offline feature group (Hive)...\n",
-      "Running sql: use demo_featurestore_fabio000_featurestore against offline feature store\n",
+      "Running sql: use demo_featurestore_admin000_featurestore against offline feature store\n",
       "Writing feature data to offline feature group (Hive)... [COMPLETE]\n",
       "Feature group created successfully"
      ]
@@ -269,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running sql: use demo_featurestore_fabio000_featurestore against offline feature store\n",
+      "Running sql: use demo_featurestore_admin000_featurestore against offline feature store\n",
       "SQL string for the query created successfully\n",
       "Running sql: SELECT * FROM sacramento_houses_fgeng_1 against offline feature store\n",
       "computing descriptive statistics for : house_price_model_training_data, version: 1\n",
@@ -293,6 +261,13 @@
     "                                     data_format=\"csv\", sink=\"house-bucket\",\n",
     "                                     path=\"house_price_model_training_data\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
