[HOPSWORKS-1530] Upgrade TensorFlow to 1.15.0

--- a/notebooks/ml/Benchmarks/benchmark.ipynb
+++ b/notebooks/ml/Benchmarks/benchmark.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "This notebook can be used to benchmark performance using CPU, a single GPU or many GPUs.\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.14</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
@@ -116,9 +116,8 @@
     "    \n",
     "    # Read synthetic data (can be replaced with real data)\n",
     "    def input_fn():\n",
-    "      data = np.random.random((batch_size, height, width, channels))\n",
+    "      data = np.random.random((batch_size, height, width, channels)).astype(np.float32)\n",
     "      labels = np.random.random((batch_size, num_classes))\n",
-    "      x = tf.cast(data, tf.float32)\n",
     "      dataset = tf.data.Dataset.from_tensor_slices((data, labels))\n",
     "      dataset = dataset.repeat(num_iterations)\n",
     "      dataset = dataset.batch(batch_size)\n",
