--- a/notebooks/ml/Distributed_Training/collective_allreduce_strategy/keras.ipynb
+++ b/notebooks/ml/Distributed_Training/collective_allreduce_strategy/keras.ipynb
@@ -7,14 +7,14 @@
     "# CollectiveAllReduceStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.14.0</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>\n",
     "\n",
     "<p>\n",
     "<h1>Machine Learning on <a href=\"https://github.com/logicalclocks/hopsworks\">Hopsworks\n",
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
@@ -75,7 +75,7 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
@@ -147,17 +147,17 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
