--- a/notebooks/ml/Distributed_Training/parameter_server_strategy/mnist.ipynb
+++ b/notebooks/ml/Distributed_Training/parameter_server_strategy/mnist.ipynb
@@ -7,7 +7,7 @@
     "# ParameterServerStrategy on Hopsworks\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.14.0</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "</a></h1> \n",
     "</p>\n",
     "\n",
-    "![hops.png](../../../images/hops.png)\n",
+    "![hops.png](../../images/hops.png)\n",
     "\n",
     "## The `hops` python module\n",
     "\n",
@@ -80,7 +80,7 @@
     "As demonstrated in the gif it provides general information about the experiment and the resulting metric. Experiments can be visualized meanwhile or after training in a TensorBoard.\n",
     "<br>\n",
     "<br>\n",
-    "![Image7-Monitor.png](../../../images/experiments.gif)"
+    "![Image7-Monitor.png](../../images/experiments.gif)"
    ]
   },
   {
@@ -332,24 +332,24 @@
     "experiment.parameter_server(parameter_server_mnist,\n",
     "                  name='mnist estimator', \n",
     "                  description='A minimal mnist example with two hidden layers',\n",
-    "                  versioned_resources=[notebook], local_logdir=True)"
+    "                  local_logdir=True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
