--- a/notebooks/ml/Experiment/Keras/mnist.ipynb
+++ b/notebooks/ml/Experiment/Keras/mnist.ipynb
@@ -7,7 +7,7 @@
     "# Keras example with h5py model saving\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow 1.14.0</h3></font>"
+    "<font color='red'> <h3>Tested with TensorFlow 1.15.0</h3></font>"
    ]
   },
   {
@@ -178,7 +178,7 @@
     "from hops import experiment\n",
     "from hops import hdfs\n",
     "\n",
-    "experiment.launch(keras_mnist, name='keras mnist', local_logdir=True)"
+    "experiment.launch(keras_mnist, name='keras mnist', local_logdir=True, metric_key='accuracy')"
    ]
   },
   {
