--- a/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
+++ b/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
@@ -160,7 +160,7 @@
     "from hops import hdfs\n",
     "experiment.launch(minimal_mnist,\n",
     "                  name='mnist estimator', \n",
-    "                  description='A minimal mnist example with two hidden layers')"
+    "                  description='A minimal mnist example with two hidden layers', metric_key='accuracy')"
    ]
   }
  ],
