--- a/notebooks/ml/Plotting/custom_scalar.ipynb
+++ b/notebooks/ml/Plotting/custom_scalar.ipynb
@@ -7,16 +7,44 @@
     "# TensorBoard custom scalar\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with TensorFlow/TensorBoard 1.11</h3></font>\n",
+    "<font color='red'> <h3>Tested with TensorFlow/TensorBoard 1.15.0</h3></font>\n",
     "\n",
-    "![Image7-Monitor.png](../../../images/custom_scalar.png)"
+    "![Image7-Monitor.png](../images/custom_scalar.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>5</td><td>application_1582818676081_0009</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1582818676081_0009/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1582818676081_0009_01_000001/demo_deep_learning_admin000__meb10000\">Link</a></td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def custom_scalar():\n",
     "    # Copyright 2017 The TensorFlow Authors. All Rights Reserved.\n",
@@ -122,9 +150,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished Experiment \n",
+      "\n",
+      "('hdfs://10.0.2.15:8020/Projects/demo_deep_learning_admin000/Experiments/application_1582818676081_0009_1', {'log': 'Experiments/application_1582818676081_0009_1/output.log'})"
+     ]
+    }
+   ],
    "source": [
     "from hops import experiment\n",
     "experiment.launch(custom_scalar)"
@@ -134,19 +172,19 @@
  "metadata": {
   "kernelspec": {
    "display_name": "PySpark",
-   "language": "",
+   "language": "python",
    "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "python",
-    "version": 2
+    "version": 3
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
