--- a/notebooks/ml/numpy/numpy-hdfs.ipynb
+++ b/notebooks/ml/numpy/numpy-hdfs.ipynb
@@ -27,23 +27,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-demo_featurestore_admin000__meb10000",
+   "display_name": "Python",
    "language": "python",
-   "name": "python-demo_featurestore_admin000__meb10000"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2.7.15"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
