[HOPSWORKS-1632] Set ipython3 lexer in hops-examples

--- a/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/tensorflow/model_repo_and_serving.ipynb
@@ -178,7 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image7-Monitor.png](../../../images/models.gif)"
+    "![Image7-Monitor.png](../../images/models.gif)"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Image7-Monitor.png](../../../images/servings.gif)"
+    "![Image7-Monitor.png](../../images/servings.gif)"
    ]
   },
   {
@@ -508,7 +508,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
