--- a/notebooks/spark/Elasticsearch-python.ipynb
+++ b/notebooks/spark/Elasticsearch-python.ipynb
@@ -127,7 +127,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
