--- a/notebooks/featurestore/petastorm/PetastormMNIST_PyTorch.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_PyTorch.ipynb
@@ -1148,7 +1148,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
