--- a/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
@@ -537,7 +537,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
