--- a/notebooks/featurestore/visualizations/Feature_Visualizations.ipynb
+++ b/notebooks/featurestore/visualizations/Feature_Visualizations.ipynb
@@ -1538,7 +1538,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
