--- a/notebooks/ml/Distributed_Training/collective_allreduce_strategy/keras.ipynb
+++ b/notebooks/ml/Distributed_Training/collective_allreduce_strategy/keras.ipynb
@@ -157,7 +157,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
