--- a/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
+++ b/notebooks/ml/End_To_End_Pipeline/sklearn/IrisClassification_And_Serving_SKLearn.ipynb
@@ -664,7 +664,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
