--- a/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
+++ b/notebooks/ml/Experiment/TensorFlow/minimal_mnist_classifier_on_hops.ipynb
@@ -177,7 +177,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
