--- a/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
+++ b/notebooks/ml/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
@@ -244,7 +244,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
