--- a/notebooks/tfx/chicago_taxi/pipeline/3.CompareStatistics.ipynb
+++ b/notebooks/tfx/chicago_taxi/pipeline/3.CompareStatistics.ipynb
@@ -205,7 +205,7 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "python2"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
