--- a/notebooks/kafka/KafkaPython.ipynb
+++ b/notebooks/kafka/KafkaPython.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TOPIC_NAME = \"test\""
+    "TOPIC_NAME = \"hello\""
    ]
   },
   {
@@ -309,9 +309,9 @@
    },
    "mimetype": "text/x-python",
    "name": "pyspark",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "python2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
